--- a/public/css/customer-body.css
+++ b/public/css/customer-body.css
@@ -4,15 +4,16 @@
 .menu{
 	align-items: center;
 	position: relative;
+	padding-left:  150px;
+	padding-right: 150px;
+	padding-top: 20px;
+	padding-bottom: 20px;
 }
 
 .menu-header{
-	position: absolute;
 	text-align: center;
 	font-size: 60px;
 	font-family: 'Merienda', cursive;
-	left: 40%;
-    top: 20px
 }
 
 
@@ -54,10 +55,11 @@
 }
 
 .menu-container{
-	padding: 120px;
+	/*padding: 120px;*/
 	display: grid;
 	justify-content: center;
-	grid-template-columns: 380px 380px 380px;
+	/*grid-template-columns: 380px 380px 380px;*/
+	grid-template-columns: repeat(auto-fit, minmax(380px,1fr));
 	grid-auto-rows: minmax(150px,auto);
 	grid-column-gap: 1px;
 	grid-row-gap: 20px;
@@ -67,8 +69,15 @@
 
 
 @media (max-width: 1050px){
-	.menu{
+	/*.menu{
 		display: none;
+	}*/
+	.menu-container .menu-box a img{
+		height: auto;
+		width: 100%;
+	}
+	.menu-header{
+		font-size: 40px;
 	}
 }
 
