--- a/public/css/customer-hero.css
+++ b/public/css/customer-hero.css
@@ -15,7 +15,6 @@ html {
     background-image: url("../images/cf.jpg");
     background-position: top;
     background-repeat: no-repeat;
-    background-size: 100% auto;
     width: 100%;
     min-height: 99vh;
     box-sizing: border-box;
@@ -85,7 +84,7 @@ html {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 1);
     position: relative;
     flex-wrap: wrap;
     width: 100%;
@@ -272,22 +271,22 @@ html {
     .toggle-btn.active{
         flex-direction: row;
     }
-    .hero-bottom.active{
+    .hero{
+    background-image: url("../images/cf2.jpg");
+    }
+    /*.hero-bottom.active{
         display: none;
     }
      .hero-bottom{
         display: none;
-    }
+    }*/
     
 
 }
 /*Media query End*/
 
-/*@media (max-width: 810px){
-    .hero-bottom{
-        display: none;
+@media(max-width: 630px){
+    .hero-bottom .header1{
+        font-size: 40px;
     }
 }
-
-
-*/
