--- a/public/css/Home.css
+++ b/public/css/Home.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Merienda&family=Montserrat&family=Roboto:wght@300&display=swap');
+
 *{
     padding: 0%;/*padding-top: 0%;padding-right: 0%;padding-bottom: 0%;padding-left: 0%;*/
     margin: 0%;
@@ -5,97 +7,88 @@
     list-style: none;
     box-sizing: border-box;
 }
-nav{
-    height: 150px;
-    width: auto;
-    /*display:inline-block;*/
-}
-nav ul li a{
-  color: black;
-  font-size: 17px;
-  border-radius: 3px;
-}
-nav ul li a:active,a:hover{
-   color: rgb(255, 138, 0);
 
+body{
+    /* background-image: url("../../public/images/background.jpg"); */
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 100% 100%;
 }
+
+.topnav{
+  background-color: rgba(105, 103, 103, 0.63);
+  font-size: 40px;
+  height: 100px;
+  align-items: center;
+}
+
+
+.topnav ul li a:hover,.fa-user a:hover,.fa-bell a:hover,.leftnav ul li a:hover{
+  color:  rgb(255, 138, 0);
+}
+
 .fa-user{
+    position: absolute;
     font-size: 50px;
-    margin: 53px 0px 0px 54px;
-    
-    /*display:inline-block;*/
-}
-.fa-bell{
-  font-size: 50px;
-  margin: 53px 54px 0px 0px;
-  float: right;
-  /*display:inline-block;*/
+    top: 40px;
+    left: 54px;
+    color: black;  
 }
 .Bake-it{
+    position: absolute;
     text-align: center;
-    font-size: 40px;
-    margin: 43px 0px 0px 609px ;
+    top:40px;
+    left: 40%;
     font-family: 'Merienda', cursive;
+    font-size: 36px;
+    line-height: 45px;
+    color: black;
+    
+}
+.fa-bell{
+    position: absolute;
+    font-size: 40px;
+    top: 40px;
+    right: 87px;
+    color: black;  
 }
 .Notifications{
-  text-align: center;
-  font-size: 20px;
+  position: absolute;
   font-family: 'Roboto', sans-serif;
-  float:right;
-  margin:  96px 22px 0px 0px;
-  /*right: 22px;
-  top: 96px;*/
+  font-size: 20px;
+  line-height: 22px;
+  top: 80px;
+  right: 54px;
+  color: black;
+}
+.leftnav ul{
+  background-color: rgb(27, 27, 27);
+  height: 350px;
+  width: 150px;
+  border-radius: 25px;
 }
 
-.fa-bars{
-  font-size: 30px;
-  color: white;
-  float: right;
-  line-height: 80px;
-  margin-right: 40px;
-  cursor: pointer;
-  display: none;
+.leftnav ul li a{
+  display: block;
+  color: rgb(105, 67, 21);
+  padding: 20%;
+  font-size: 20px;
 }
 
-#fa-bars{
-    display: none;
+#fa-user:hover{
+  color: rgb(255, 138, 0);
 }
-/*@media (max-width: 952px){
-    .Bake-it{
-        font-size: 30px;
-        padding-left: 50px;
-    }
-    nav ul li a{
-        font-size: 16px;
-    }
+
+footer{
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 150px;
+  text-align: center;
+  background-color: cadetblue;
+
 }
-@media (max-width: 858px){
-    .fa-bars{
-        display: block;
-    }
-    ul{
-        position: fixed;
-        width: 100%;
-        height: 100vh;
-        background: #2c3e50;
-        top: 80px;
-        left: -100%;
-        text-align: center;
-        transition: all .5s;
-      }
-      nav ul li{
-        display: block;
-        margin: 50px 0;
-        line-height: 30px;
-      }
-      nav ul li a{
-        font-size: 20px;
-      }
-      a:hover,a.active{
-        background: none;
-        color: #0082e6;
-      }
-      #fa-bars ~ ul{
-        left: 0;
-      }
-}*/
+
+
+/* header height 100
+footer        240 */
