--- a/public/css/delivery1pg.css
+++ b/public/css/delivery1pg.css
@@ -10,7 +10,7 @@
     @import url('https://fonts.googleapis.com/css2?family=Merienda&family=Montserrat&family=Roboto:wght@300&display=swap%27);
 }*/
 nav{
-    background-color: white;
+    background-color: transparent;
     width: 100%;
 }
 .topnav{
@@ -35,6 +35,7 @@ nav{
     left: 54px;
     top: 53px;
     color: #000000;
+    /*background-color: transparent ;*/
 }
 .toggle-button{
     padding: 0%;
@@ -115,7 +116,7 @@ nav{
     background-color: white;
 }
 body{
-    background-image: url("../../public/images/background.jpg");
+    /*background-image: url("../../public/images/background.jpg");*/
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 100% 100%;
@@ -174,19 +175,24 @@ body{
 /*Footer Starts*/
 
 footer{
-	background-color: red;
-	background-image: linear-gradient(180deg, #000000 0%, #171618 50%, #000000 100%);
+	/*background-color: red;
+	background-image: linear-gradient(180deg, #000000 0%, #171618 50%, #000000 100%);*/
+    padding: 20px;
+    text-align: center;
+    margin-top: 520px;
+    margin-bottom: 0%;
+    background-color: linear-gradient(180deg, #000000 0%, #171618 50%, #000000 100%);
 }
 
-/*.footer-row{
+.FooterRow{
 	display: flex;
 	flex-wrap: wrap;
 	padding: 10px;
 	justify-content: space-around;
 	align-items: center;
-}*/
+}
 
-.footer-column ul li{
+/*.footer-column ul li{
 	list-style: none;
 }
 
@@ -206,9 +212,9 @@ footer{
 
 .footer-column ul li:hover{
 	color: rgb(255, 138, 0);
-}
+}*/
 
-.footer-column ul li a:hover{
+.FooterRow ul li a:hover{
 	color: rgb(255, 138, 0);
 }
 
@@ -242,4 +248,4 @@ footer{
 	}
 }
 
-/Footer Ends*/
+
