--- a/public/css/Availability.css
+++ b/public/css/Availability.css
@@ -3,31 +3,51 @@
     margin: 0;
     padding: 0;
 }
-#container{
-      display: inline-flex;
-      align-items: center;
-      flex-direction: row;
-      justify-content: space-around;
-      flex-basis: 25%;
-      height: 50vh;
-}
-.button-container{
-      display: inline-flex;
-      border-radius:5px;
-      padding:100px;
-      background-color: rgb(207, 216, 207);
-      justify-content: space-around;
-      border: 2px solid rgb(255, 127, 127);
+.available-body h2{
+      padding-top: 50px;
       text-align: center;
-      text-decoration: none;
-
-}
-.button1,.button2{
-      background-color: rgb(207, 216, 207);
-      border-color: rgb(207, 216, 207);
-      font-size: 25px;
+      font-size: 30px;
       font-family: 'Roboto', sans-serif;
-      font-weight: 100;
+      font-weight: bold;
 }
+.availability-selection{
+      display: flex;
+      padding:15px;
+      /* margin-top: 10px; */
+      margin-left: 15%;
+      width: 75%;
+      justify-content: space-around;     
 
-
+}
+.availability-selection a{
+      background-color: #f4f4f4;
+      border: 2px solid rgb(255, 127, 127);
+      color: black; 
+      width: 42%; 
+      height:150px; 
+      margin: 10px;
+      padding: 39px; 
+      text-align: center; 
+      font-size: 30px;
+      text-decoration: none;   
+  }
+/* .footer{
+      margin-bottom: 0%;
+}  */
+@media(max-width:787px){
+      .available-body h2,.availability-selection a{
+            font-size: 30px;
+      }
+      .availability-selection{
+            width: 50%;
+      }
+}
+@media(max-width:480px){
+      .available-body h2,.availability-selection a{
+            font-size: 19px;
+      }
+      .availability-selection{
+            width: 100%;
+            flex-direction: column;
+      }
+}
