--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -8,7 +8,7 @@ body{
     line-height: 1.5;
 }
 .footer{
-    /* position: static; */
+    /* position: fixed;  */
     bottom: 0;
     padding: 25px 0;
     width: 100%;
@@ -98,7 +98,7 @@ ul{
 }
 .fa-phone-square-alt,.fa-envelope,.fa-map-marker-alt{
     color: rgb(241, 205, 136);
-    font-size: 10px;
+    font-size: 20px;
     display: inline-block;
 
 }
@@ -127,7 +127,22 @@ footer p{
     }
 }
 @media(max-width: 480px){
+    /* .footer{
+        height: 25vh;
+    } */
     .footer-col{
         width: 100%;
+    }
+    .footer-col h4{
+        font-size: 15px;
+    }
+    .footer-col ul li{
+        font-size: 10px;
+    }
+    .fab{
+        font-size: 25px;
+    }
+    .fa-phone-square-alt,.fa-envelope,.fa-map-marker-alt,.far{
+        font-size: 13px;
     }
 }
