--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -40,9 +40,9 @@ ul{
     font-weight: 500;
     position: relative;
 }
-.bake-it{
-    /* font-family: 'Merienda', cursive; */
-    font-style: italic;
+#Bake-it{
+    font-family: 'Merienda', cursive;
+    line-height: 1.5;
 }
 /* .footer-col h4 a{
     color: rgb(247, 170, 99);
@@ -121,6 +121,9 @@ footer p{
 }
 /*responsive*/
 @media(max-width: 767px){
+    .footer{
+        padding: 0%;
+    }
     .footer-col{
         width: 50%;
         margin-bottom: 30px;
