--- a/public/css/bakery_manager/bakery_manager_home_style.css
+++ b/public/css/bakery_manager/bakery_manager_home_style.css
@@ -18,7 +18,7 @@ body{
   margin: 0;
   padding: 0;
    width: 100%;
-   height: 100px;
+   height: 80px;
   background: rgba(24, 22, 22, 0.753);
 }
 .image-div{
@@ -52,24 +52,24 @@ a{
     font-family: Rancho;
     font-style: normal;
     font-weight: normal;
-    font-size: 48px;
+    font-size: 35px;
     line-height: 60px;
-    
+   
   }
   .herf-bake-it:hover{
     color: rgb(255, 138, 0);
-    font-size:55px ;
+    font-size:43px ;
 
   }
   .bell_icon{
     position: absolute;
     width: 100px;
     height: 20px;
-    right: 10px;
-    top: 30px;
+    right: 4px;
+    top: 28px;
   }
   #bell {
-    font-size: 40px;
+    font-size: 30px;
     color: white;
   }
   #bell:hover{
@@ -81,13 +81,13 @@ a{
     position: absolute;
     width: 100px;
     height: 56px;
-    right: 39px;
-    top: 67px; 
+    right: 24px;
+    top: 49px; 
 
     font-family: Prociono;
     font-style: normal;
     font-weight: normal;
-    font-size: 20px;
+    font-size: 14px;
     line-height: 34px;
     color: #ffffff
 
@@ -100,7 +100,7 @@ a{
     top: 30px;
   }
   #user_logo_id{
-    font-size: 60px;
+    font-size: 35px;
     color: rgb(255, 255, 255);
   }
   #user_logo_id:hover{
@@ -114,8 +114,8 @@ a{
     position: absolute;
     width: 50px;
     height: 40px;
-    left: 30px;
-    top: 110px;
+    left: 23px;
+    top: 90px;
     cursor:pointer;
   }
 
@@ -143,9 +143,10 @@ a{
   
   position: absolute;
   width: 0px;
-  height: 540px;
-  left: 20px;
-  top: 110px;
+  height: 410px;
+  left: 10px;
+  top: 90px;
+  z-index: 1; 
   z-index: 1; 
 
   background: #000000fb;
@@ -160,7 +161,7 @@ a{
 .sidenav a {
   padding: 8px 8px 28px 18px;
   text-decoration: none;
-  font-size: 30px;
+  font-size: 20px;
   color: #ffffff;
   display: block;
   transition: 0.3s;
