--- a/public/css/bakery_manager/daily_requirment.css
+++ b/public/css/bakery_manager/daily_requirment.css
@@ -11,16 +11,16 @@ body{
 }
 .daily-requirment{
     position: absolute; 
-    left: 49%;
-    top: 130px;
+    left: 39%;
+    top: 95px;
     font-size: xx-large;
     font-weight: bold;
 }
 .content{
     margin: 0;
-    margin-left: 14%;
-    margin-top: 6%;
-    width: 86%;
+    margin-left: 16%;
+    margin-top: 4.5%;
+    width: 82%;
     height: 52vh;
     display: flex;
    
@@ -33,11 +33,13 @@ body{
     display: flex;
     flex-direction: column;
     
+    
 }
 .category-list button{
-    width: 330px;
-    height: 70px;
-    font-size: 23px;
+    width: 300px;
+    height: 60px;
+    font-size: 20px;
+    font-weight: 6px;
     border-radius: 10px;
     cursor: pointer;
     border: 1px solid rgb(257, 138, 0);
@@ -84,7 +86,7 @@ body{
     height: 190px;
     border-collapse: collapse;
     margin: 25px, 0;
-    font-size: 21px;
+    font-size: 20px;
     min-width: 900px;
     border-radius:5px 5px 0 0 ;
     overflow:hidden ; 
@@ -112,7 +114,7 @@ body{
 .content-table tbody tr:hover{
   background-color: #ffefea;
  height: 47px;
- font-size: 22px;
+ font-size: 21px;
   
 }
 /* .content-table tbody tr:nth-of-type(even){
