--- a/public/css/bakery_manager/header.css
+++ b/public/css/bakery_manager/header.css
@@ -1,6 +1,6 @@
 .header{
     width: 100%;
-    height: 100px;
+    height: 80px;
     background: rgba(49, 47, 47, 0.553);
   }
    
@@ -21,24 +21,24 @@
       font-family: Rancho;
       font-style: normal;
       font-weight: normal;
-      font-size: 48px;
+      font-size: 35px;
       line-height: 60px;
       
     }
     .herf-bake-it:hover{
       color: rgb(255, 138, 0);
-      font-size:55px ;
+      font-size:43px ;
   
     }
     .bell_icon{
       position: absolute;
       width: 100px;
       height: 20px;
-      right: 10px;
-      top: 30px;
+      right: 4px;
+      top: 28px;
     }
     #bell {
-      font-size: 40px;
+      font-size: 30px;
       color: rgb(0, 0, 0);
     }
     #bell:hover{
@@ -51,19 +51,19 @@
       position: absolute;
       width: 100px;
       height: 56px;
-      right: 39px;
-      top: 67px;
+      right: 24px;
+      top: 49px;
   
       font-family: Prociono;
       font-style: normal;
       font-weight: normal;
-      font-size: 20px;
+      font-size: 14px;
       line-height: 34px;
-      color: #000000
+      color: #000000;
   
     }
     #user_logo_id{
-      font-size: 60px;
+      font-size: 35px;
       color: rgb(0, 0, 0);
     }
     #user_logo_id:hover{
