--- a/public/css/bakery_manager/profile.css
+++ b/public/css/bakery_manager/profile.css
@@ -12,7 +12,7 @@ body{
 
 .header{
   width: 100%;
-  height: 100px;
+  height: 80px;
   background: rgba(49, 47, 47, 0.553);
 }
 a{
@@ -31,24 +31,24 @@ a{
       font-family: Rancho;
       font-style: normal;
       font-weight: normal;
-      font-size: 48px;
+      font-size: 35px;
       line-height: 60px;
     
   }
   .herf-bake-it:hover{
     color: rgb(255, 138, 0);
-    font-size:55px ;
+    font-size:43px ;
 
   }
   .bell_icon{
     position: absolute;
     width: 100px;
     height: 20px;
-    right: 10px;
-    top: 30px;
+    right: 4px;
+    top: 28px;
   }
   #bell {
-    font-size: 40px;
+    font-size: 30px;
     color: rgb(0, 0, 0);
   }
   #bell:hover{
@@ -61,15 +61,15 @@ a{
     position: absolute;
     width: 100px;
     height: 56px;
-    right: 39px;
-    top: 67px;
+    right: 24px;
+    top: 49px;
 
     font-family: Prociono;
     font-style: normal;
     font-weight: normal;
-    font-size: 20px;
+    font-size: 14px;
     line-height: 34px;
-    color: #000000
+    color: #000000;
   }
 .middle-section{
  
@@ -83,7 +83,7 @@ a{
     width: 65%;
     height: 50vh;
     left: 18%;
-    top: 15vh;
+    top: 11vh;
     
       
   }
@@ -101,24 +101,22 @@ a{
   }
   .button-class{
     position: absolute;
-    left: 28%;
-    top: 60vh;
-    width: 60%;
-    height: 52px;
-    /* background-color: aquamarine; */
+    left: 41%;
+    top: 53vh;
+    width: 20%;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
   }
- .change-name{
-   margin: 0;
-   margin-left: 8%;
-   padding: 0;
-    float: left;
- } 
- .reset-password{
-    float: right;
-    margin-right: 20%;
+
+ .bakery-name{
+   font-size: 23px;
+   font-weight: bold;
+   margin-bottom: 25px
  }
 #button{
-    width: 130px;
+    width: 180px;
     height:50px;  
     background: #FFFFFF;
     border: 1px solid rgba(247, 93, 73, 0.98);
