--- a/public/css/bakery_manager/raw_materials.css
+++ b/public/css/bakery_manager/raw_materials.css
@@ -9,77 +9,41 @@ body{
     height: 100vh;
     
 }
-/* .content{
-    width: 100%;
-    height: 64vh;
-    display: flex;
-    align-items: center;
-}
-.available-material-btn{
-    margin-left: 27.5%;
-    margin-right: 1%;
-    width: 18%;
-    height: 36vh;
-    
-    
-}
-.add-stock-btn{
-    margin-right: 1%;
-    width: 18%;
-    height: 36vh;
-    
-}
-.summary-btn{
-    margin-right: 1%;
-    width: 18%;
-    height: 36vh;
-   
-}
-#button{
-    background: rgb(255, 255, 255);
-    width: 100%;
-    height: 40vh;
-    cursor: pointer;
-    border-radius: 20px;
-    font-size: 29px;
-    border-color: rgb(255, 123, 0);
-    text-align: center;
+.topic{
+    position: absolute;
+    width: 250px;
+    height: 50px;
+    left: 42%;
+    top: 100px;
+    font-size: 27px;
+    font-weight: bold;
 
-    
 }
-#button::before{
-    content: '';
-}
-#button:hover{
-    background:rgb(134, 127, 127);
-    color: rgb(255, 255, 255);
-    border-color: rgb(255, 51, 0);
-
-} */
 
 section{
-    min-height: 50vh;
+    height: 60vh;
    align-items: center;
 }
 
 .raw-btn{
-    width: 80%;
-    height: 700px;
+    width: 60%;
+    height: 370px;
     display: flex;
     align-items: center;
     flex-wrap: wrap;
     justify-content:space-evenly;
-    margin-left: 10%;
-    margin-right:10% ;
+    margin-left: 20%;
+    margin-right:20%;
+   
 }
 .raw-btn a{
     align-items: center;
 }
 .raw-btn a button{
     /* padding: 100px 70px; */
-    width: 380px;
-    height: 270px;
-    font-size: 30px;
+    width: 300px;
+    height: 200px;
+    font-size: 25px;
     border-radius: 10px;
     cursor: pointer;
     border: 1px solid rgb(257, 138, 0);
