--- a/public/css/bakery_manager/side_nav.css
+++ b/public/css/bakery_manager/side_nav.css
@@ -3,12 +3,12 @@
     position: absolute;
     width: 50px;
     height: 40px;
-    left: 30px;
-    top: 110px;
+    left: 25px;
+    top: 90px;
     cursor:pointer"
   }
   .bar1, .bar2, .bar3 {
-    width: 40px;
+    width: 37px;
     height: 5px;
     background-color: rgb(0, 0, 0);
     margin: 6px 0;
@@ -30,9 +30,9 @@
 .sidenav {
   position: absolute;
   width: 0px;
-  height: 420px;
+  height: 410px;
   left: 10px;
-  top: 110px;
+  top: 90px;
   z-index: 1; 
 
   background: #000000f5;
@@ -47,26 +47,28 @@
 .sidenav a {
   padding: 8px 8px 28px 18px;
   text-decoration: none;
-  font-size: 24px;
+  font-size: 20px;
   font-weight: bold;
   color: #ffffff;
   display: block;
   transition: 0.3s;
-  padding-top: 30px;
+  padding-top: 20px;
 }
 
 .sidenav a:hover {
   color: rgb(255, 123, 0);
   font-weight: bold;
-  font-size: 26px;
+  font-size: 19px;
 }
 
 .sidenav .closebtn {
   position: absolute;
   top: 0;
   right: 25px;
-  font-size: 40px;
+  font-size: 29px;
   margin-left: 50px;
 }
-
+.sidenav .closebtn:hover{
+  font-size: 32px;
+}
 
