--- a/public/css/customer-login.css
+++ b/public/css/customer-login.css
@@ -8,7 +8,9 @@ section{
 section .login-image{
 	position: relative;
 	width: 50%;
-	height: 100%;
+	height: 120vh;
+	bottom: 4rem;
+	z-index: -2;
 }
 
 section .login-image img{
