--- a/public/css/customer-myorders.css
+++ b/public/css/customer-myorders.css
@@ -1,9 +1,18 @@
+.mobile-orders{
+	display: none;
+}
 section{
 	min-height: 99vh;
+	position: relative;
+	overflow-x: hidden;
+	font-size: 1.4rem;
 }
 
+/*Desktop Orders Starts*/
 .order-container{
 	width: 100%;
+	position: absolute;
+	transition: transform 1s;
 }
 
 .order-container table{
@@ -39,6 +48,10 @@ section{
 .order-container table td a{
 	text-decoration: none;
 	color: rgb(230, 134, 46);
+	transition: 0.2s ease-in-out;
+}
+.order-container table td a:hover{
+	letter-spacing: 1px;
 }
 
 .order-btn{
@@ -48,3 +61,73 @@ section{
 	flex-direction: row;
 	justify-content: space-evenly;
 }
+
+#specia-order{
+	left: 1500px;
+}
+
+.order-btn{
+	display: inline-block;
+	position: relative;
+	margin-left: 10%;
+	margin-top: 20px;
+}
+.order-btn span{
+	font-weight: bold;
+	cursor: pointer;
+	display: inline-block;
+	padding: 0 10px;
+	width: 200px;
+}
+.order-btn .indicator{
+	width: 125px;
+	border: none;
+	background-color: rgba(255, 138, 0,1);
+	height: 3px;
+	margin-top: 8px;
+	transition: transform 1s;
+}
+
+@media(max-width: 810px){
+	.desktop-orders{
+		display: none;
+	}
+	.mobile-orders{
+		display: block;
+	}
+}
+/*Desktop Orders Ends*/
+
+/*Mobile Orders Starts*/
+
+#specia-orderm{
+	left: 800px;
+}
+
+.order-btnm{
+	width: 100%;
+	display: inline-block;
+	position: relative;
+	margin-left: 10%;
+	margin-top: 20px;
+}
+
+.order-btnm span{
+	width: 180px;
+	display: inline-block;
+	padding: 0 10px;
+	cursor: pointer;
+	font-weight: bold;
+}
+#quick-order-span{
+	color: rgba(255, 138, 0,1);
+}
+
+.order-container table{
+	border: 2px solid rgba(255, 137, 0, 1.0);
+}
+#quick-orderm table tr td:first-child,#specia-orderm table tr td:first-child{
+	font-weight: bold;
+}
+
+/*Mobile Orders Ends*/
