--- a/public/css/customer-signup.css
+++ b/public/css/customer-signup.css
@@ -3,12 +3,15 @@ section{
 	position: relative;
 	width: 100%;
 	height: 100vh;
+	font-size: 1.4rem;
 }
 
 section .signup-image{
 	position: relative;
 	width: 30%;
-	height: 100%;
+	height: 120vh;
+	z-index: -2;
+	bottom: 4rem;
 }
 
 section .signup-image img{
