--- a/public/css/customer-signup.css
+++ b/public/css/customer-signup.css
@@ -120,6 +120,7 @@ section .content-box .input-box input[type="submit"]{
 	transition: 0.3s ease-in-out;
 	background-color: white;
 	margin-top: 10px;
+	border: 1px solid rgb(255, 138, 0);
 }
 section .content-box  .input-box input[type="submit"]:hover{
 	background-color: rgba(255, 138, 0,0.7);
