--- a/public/css/deliveryPerson/deliveryPerson-footer.css
+++ b/public/css/deliveryPerson/deliveryPerson-footer.css
@@ -8,11 +8,10 @@ body{
     line-height: 1.5;
 }
 #footerId{
-    /* position: fixed;  */
+    position: relative;  
     bottom: 0;
     padding: 25px 0;
     width: 100%;
-    /* background-color: #000000; */
 	background-image: linear-gradient(180deg, #000000 0%, #171618 50%, #000000 100%);
     z-index: 3;
 }
@@ -30,7 +29,6 @@ footer > ul{
 .footer-col{
     width: 25%;
     padding: 0 10px;
-    /* background-color: turquoise; */
 }
 .footer-col h4{
     font-size: 18px;
