--- a/public/css/deliveryPerson/deliveryPerson-header.css
+++ b/public/css/deliveryPerson/deliveryPerson-header.css
@@ -1,124 +1,70 @@
 @import url('https://fonts.googleapis.com/css2?family=Merienda&family=Montserrat&family=Roboto:wght@300&display=swap');
+
 *{
-    margin: 0%;
-    padding: 0%;
+    padding: 0;
+    margin: 0;
     box-sizing: border-box;
-    list-style-type: none;
-    text-decoration: none;
+    font-family: 'Montserrat', sans-serif; 
 }
 a{
-    color: rgb(255, 255, 255);
     text-decoration: none;
-}
-a:hover{
-    color: rgb(255, 138, 0);
-}
-/* header css start */
-.header-container {
-    display: grid;
-    min-height: 5vh;
-    grid-template-columns: repeat(8,1fr);
-    background-color: rgb(26, 24, 24);
-    z-index: 3; 
-} 
-.header-container > div {
-    justify-content:center;
-    padding: 15px 0; 
-    font-size: 20px;
     color: white;
 }
- 
-.header-container .title {
-    grid-column: 1 / span 7;
-    margin-left: 10%;
-    font-family: 'Merienda', cursive;
-    font-weight: 500;
-    text-align: left;
+ a:hover{
+    color: rgb(255,138,0);   
 }
-.user-icon{
-    text-align: right;
-}
-.bell-icon{
-    text-align: left;
-    margin-left: 46px;
-}  
-/* header css ends  */
- .wrapper-nav{
-     background-color: black;
-     width: 70px;
-     height: 100%;
- }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
- /*side navigation css start */
-/* .wrapper-nav{
-    /* position: relative; 
-    z-index: 1;
-}
-.wrapper-nav #side-nav{
-    /* position: relative; 
-    display: flex;
-    flex-direction: row;
-    left: 0;
+/* side-navigation css */
+.container{
+    position: absolute;
+    top: 0;
     width: 70px;
     height: 100%;
-    background-color: rgb(26, 24, 24);
-    /* border-radius: 5px; 
+    background-color: rgb(0, 0, 0);
+}
+.container .navigation{
+    position:  fixed;
+    width: 70px;
+    height: 100vh;
+    background-color: rgb(0, 0, 0);
     overflow: hidden;
     box-shadow: 0 5px 15px rgb(0,0,0,0,2);
     transition: 0,5px;
-    flex-wrap: wrap;
-    align-content: space-between;
-    justify-content: center;
-    align-items: center;
+
 }
-.wrapper-nav #side-nav.active{
+.container .navigation.active{
     width: 300px;
+    height: 100vh;
 }
-.wrapper-nav #side-nav ul{
-    /* position: absolute; 
-   
-    top: 10%;
+/* .navigation.active .bgg{
+    margin-left: 320px;
+} */
+.container .navigation ul{
+    position:  relative;
+    top: 30px;
     left: 0;
     width:100% ;
 }
-.wrapper-nav #side-nav ul li{
-    /* position: relative; 
-    display: flex;
-
+.container .navigation ul li{
+    position:  relative;
     list-style: none;
     width: 100%;
+    margin-top: 19.5px;
+    transition: 0.2s ease-in-out;
+    z-index: 100;
 
 }
-.wrapper-nav #side-nav ul li a {
-    /* position: relative; 
-    display: block;
+.container .navigation ul li a {
+    position:  relative;
     width: 100%;
     display: flex;
     text-decoration: none;
     color: white;
-    font-family: 'Montserrat', sans-serif;
     font-weight: 500px;
+    transition: 0.2s ease-in-out;
 
 }
-.wrapper-nav #side-nav ul li a .icon{
-    /* position: relative; 
+.container .navigation ul li a .icon{
+    position:  relative;
     display: block;
     min-width:80px;
     height: 60px;
@@ -126,67 +72,99 @@ a:hover{
     text-align: center;
 
 }
-.wrapper-nav #side-nav ul li:hover{
-    background: #8f8e8e;
+.container .navigation ul li:hover{
+    background: rgba(37, 37, 37, 0.9);
     color: rgb(255,138,0);
 }
-.wrapper-nav #side-nav ul li a:hover{
+.container .navigation ul li a:hover{
     color: rgb(255,138,0);
+    font-weight: bold;
 }
-.wrapper-nav #side-nav ul li a .icon .fa{
+.container .navigation ul li a .icon .fa{
     font-size: 24px;
 }
-.wrapper-nav #side-nav ul li a .title{
-    /* position: relative; 
+#menuBtn{
+    font-size: 20px;
+    transition: 0.2s ease-in-out;
+}
+#menuBtn:hover{
+    font-size: 22px;
+}
+
+.container .navigation ul li a .title{
+    position: relative; 
     display: block;
     height: 60px;
     line-height: 60px;
     white-space: nowrap;
-} */
-
-
+}
 .toggle{
-    position: absolute;
+    position: fixed;
     top: 20px;
     left: 31px;
     width: 40px;
     height: 40px;
     color: rgb(255, 255, 255);
     cursor: pointer;
+}
+/*top header css*/
+.header-container{
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: row;
+    top: 0;
+    width: 100%;
+    height: 7vh;
+    background-color: rgb(0, 0, 0);
+    flex-wrap: nowrap;
+    align-content: space-around;
+    align-items: center;
+}
+.header-container .bake-it{
+    flex-grow: 8;
+    font-weight:bold;
+    text-align: left;
+    color: white;
     font-size: 20px;
+    padding-left: 74px;
+    transition: transform 3s;
+
+}
+.header-container .bake-it .bakeit{
+    font-family: 'Merienda', cursive;
+}
+.header-container .header-icons{
+    display: flex;
+    justify-content: space-around;
+    flex-grow: 1;
+    text-align: left;
+    color: white;
+    
+}
+.fa-user{
+    margin-right: 20px;
+}
+.fa-sign-out-alt{
+    margin-right: 5px;
 }
 
-
-/* responsive */
-@media(max-width:600px){
-    header{
-        min-height: 5vh;
+/* Responsive */
+@media (max-width: 700px) {
+    .header-container{
+      width: 100%;
+      font-size: 15px;
     }
-    .nav-bars{
-        display: flex;
-        padding-left: 50%;
+    .header-container .bake-it{
+      font-size: 15px;
     }
-    #open{
-        display: flex;
-        flex-grow: 30px;
-        flex-basis: 20px; 
+    .header-container .header-icons{
+        flex-grow: 0;
     }
-    #close{
-        flex-grow: 30px;
-        flex-basis: 20px; 
-    }
-    #header-navigation{
-        display: none;
-    }
-    .bake-it{
-        padding-right: 70%;
-        margin-left: 0%;
-        justify-content: left;
-        align-items: left;
-    }
-    #side-nav ul {
-        grid-template-columns: 1fr;
+  }
+  
+  @media (max-width: 500px) {
+    .header-container{
+        width: 100%;
       }
-    
-    
-}
+  }
+  
