--- a/public/css/customer-navbar-index.css
+++ b/public/css/customer-navbar-index.css
@@ -302,11 +302,11 @@ nav{
 .text h1{
     font-size: 8rem;
     margin: 2rem 0;
-    font-family: 'Blastimo', sans-serif;
+    font-family: 'Merienda', cursive;
 }
 
 .text h2{
-    font-size: 1.6rem;
+    font-size: 5rem;
     text-transform: uppercase;
     font-weight: 300;
 }
