--- a/public/css/customer-signup.css
+++ b/public/css/customer-signup.css
@@ -89,6 +89,7 @@ section .content-box .address-box .address-inside .input-box{
 	flex-direction: column;
 	width: 100%;
 	align-items: flex-start;
+	margin: 0 auto;
 }
 
 section .content-box .address-box .address-inside a{
