--- a/public/css/deliveryPerson/deliveries2.css
+++ b/public/css/deliveryPerson/deliveries2.css
@@ -3,32 +3,81 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
+}
+.deliverypg-topic{
+    margin-top: 30px;
+    margin-left: 20%;
 }
 .delivery-container{
+    margin-top: 20px;
+    margin-left: 20%;
     display: grid;
+    align-content: space-between;
     grid-template-columns: repeat(3, 1fr);
-    grid-gap: 20px;
+    grid-gap: 35px;
     grid-auto-rows: minmax(10vh,auto);
-    border: 5px solid rgba(255, 8, 0, 0.507);
-}
-.map{
-    display: grid;  
-}
-#Location-track{
-    grid-column: 1/10;
-    grid-row: 1/10;
-    background-image: url("../../public/images/map.png");
-    background-position: center;
-    background-size: cover; 
-    z-index: -1;
+    /* border: 5px solid rgba(255, 8, 0, 0.507); */
 }
 
-.sub-container1{
+.delivery-container .map{
+    grid-area: 1 / 1 / span 1 / span 4;
+    display: grid; 
+    align-content: space-between; 
+    width: 100%;
+    height: 60vh;
+}
+.delivery-container .map span{
+    color: black;
+    font-weight: 700;
+}
+.delivery-container .map #Location-track{
+    grid-area: 2 / 1 / span 1 / span 4;
+    background-image: url("../../images/deliveryPerson/map.png");
+    /* background-position: center; */
+    background-size: cover; 
+    width: 75em;
+    height: 50vh;
+    border: 2px solid rgba(255, 138, 0, 0.8);
+    box-shadow: 2px 1px rgba(255, 137, 0,1);
+}
+
+.delivery-container .sub-container1{
+    grid-area: 2 / 1 / span 1 / span 4;
     display: grid;
-    grid-column: 1/5;
-    grid-template-columns: 33%;
-    grid-gap: 5fr;
-    border: 5px solid rgb(0, 119, 255);
-    background: rgb(245, 184, 184);
-    /* grid-auto-rows: minmax(50vh, auto); */
+}
+.delivery-container .sub-container1 .sub-container2{
+    margin-top: 10px;
+    display: flex;
+    flex-direction: row;
+    font-size: 15px;
+}
+.delivery-container .sub-container1 .sub-container2 span{
+    width: 25%;
+}
+.delivery-container .sub-container1 .sub-container2 .feild{
+    font-weight: 700;
+}
+
+.delivery-container .sub-container1 .sub-container2 .answer{
+    border-bottom: 1px solid black;
+}
+.delivery-container .button{
+    margin-top: 20px;
+    border: 1px solid black;
+    color: rgb(0, 0, 0);
+    background: white;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+.delivery-container .reject:hover{
+    background: red;
+}
+.delivery-container .complete{
+    margin-left: 150%;
 }
