--- a/public/css/deliveryPerson/deliveries2.css
+++ b/public/css/deliveryPerson/deliveries2.css
@@ -81,3 +81,97 @@
 .delivery-container .complete{
     margin-left: 150%;
 }
+
+.radio-box{
+	width: 80%;
+	/*margin-left: 15rem;*/
+	margin: 0 0 0 15rem;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: flex-start;
+}
+.radio-box div{
+	width: 40%;
+	display: flex;
+	justify-content: space-between;
+}
+.radio-box h3{
+	margin-bottom: 2rem;
+}
+.radio-box label input{
+	display: none;
+}
+.radio-box label {
+	display: block;
+	cursor: pointer;
+	margin-bottom: 3rem;
+	padding-left: 3.5rem;
+	position: relative;
+}
+.radio-box label .circle{
+	height: 3rem;
+	width: 3rem;
+	border:3px solid #000000;
+	border-radius: 50%;
+	display: inline-block;
+	position: absolute;
+	left:0;
+	top:-5px;
+	transition: border-color .5s ease;
+}
+.radio-box label .circle::before{
+	content: '';
+	height: 1.5rem;
+	width: 1.5rem;
+	background-color: #ff8900;
+	position: absolute;
+	left:0;
+	top:0;
+	border-radius: 50%;
+	box-sizing: border-box;
+	margin-left:0.45rem;
+	margin-top:0.45rem;
+	transition: transform .5s ease;
+	transform: scale(0);
+}
+.radio-box label span{
+	font-size: 1.4rem;
+	color:#000000;
+	display: inline-block;
+	text-transform: uppercase;
+	transition:color .5s ease;
+}
+.radio-box label input:checked + .circle{
+	border-color:#ff9800;
+}
+.radio-box label input:checked + .circle::before{
+	transform: scale(1);
+}
+.radio-box label input:checked + .circle + span{
+	color:#ff9800;
+}
+.billing-details .location-details{
+	width: 80%;
+	display: none;
+	flex-direction: column;
+	margin-left: 15rem ;
+	margin-top: 1rem;
+}
+.billing-details .location-details input{
+	width: 40%;
+	border: 1px solid rgb(255, 138, 0);
+	background: transparent;
+	border-radius: 30px;
+	padding: 10px 20px;
+	outline: none;
+	margin-bottom: 20px;
+	font-size: 1.4rem;
+}
+/* css for buttons
+border radius 10 px
+padding 10px 10px
+border 2px solid rgb(255,138,0) 
+while hovering--> background color rgb(255,138,0)
+color:white
+*/
